feat: adding database interface to connect multible databases
